--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
             colors: {
               clifford: "#da373d",
             },
+            fontFamily:{
+              'manrope':['Manrope', 'serif'] }
           },
         },
       };
     </script>
   </head>
-  <body>
+  <body class="font-manrope">
     <!-- main content -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
       <!-- header section -->
@@ -261,5 +263,108 @@
         </div>
       </section>
     </main>
+    <!-- footer section -->
+    <footer class="bg-orange-100 text-gray-700 py-10 px-14 md:px-16">
+      <div class="w-9/12 mx-auto"></div>
+      <!-- logo -->
+      <div class="mb-8 flex justify-between items-center">
+        <img class="mb-8" src="./images/cup.png" alt="" />
+        <div class="flex  justify-center items-center gap-2">
+          <h4>Ready to get started</h4>
+          <button class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg text-white font-bold"">Get Started</button>
+        </div>
+      </div>
+      <!-- Links -->
+       <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+
+        <!-- first column -->
+       <div>
+             <h3 class="font-semibold text-lg mb-3"> Quick Links</h3>
+             <ul class="space-y-2">
+          <li>
+            <a class="hover:text-orange-300" href="#">Home</a>
+          </li>
+
+          <li>
+            <a class="hover:text-orange-300" href="#">About</a>
+          </li>
+
+          <li>
+            <a class="hover:text-orange-300" href="#">Insurance</a>
+          </li>
+
+          <li>
+            <a class="hover:text-orange-300" href="#">Privacy Policy</a>
+          </li>
+         </ul>
+         </div>
+
+          <!-- Second column -->
+       <div>
+        <h3 class="font-semibold text-lg mb-3"> Our Services</h3>
+        <ul class="space-y-2">
+     <li>
+       <a class="hover:text-orange-300" href="#">Home</a>
+     </li>
+
+     <li>
+       <a class="hover:text-orange-300" href="#">About</a>
+     </li>
+
+     <li>
+       <a class="hover:text-orange-300" href="#">Insurance</a>
+     </li>
+
+     <li>
+       <a class="hover:text-orange-300" href="#">Privacy Policy</a>
+     </li>
+    </ul>
+    </div>
+    
+     <!-- 3rd column -->
+     <div>
+      <h3 class="font-semibold text-lg mb-3"> Help</h3>
+      <ul class="space-y-2">
+   <li>
+     <a class="hover:text-orange-300" href="#">Home</a>
+   </li>
+
+   <li>
+     <a class="hover:text-orange-300" href="#">About</a>
+   </li>
+
+   <li>
+     <a class="hover:text-orange-300" href="#">Insurance</a>
+   </li>
+
+   <li>
+     <a class="hover:text-orange-300" href="#">Privacy Policy</a>
+   </li>
+  </ul>
+  </div>
+<!-- 4th column -->
+<div>
+  <div>
+    <h3 class="font-semibold text-lg mb-3"> Subscribe to our newsletter</h3>
+   </div>
+   <div class=" flex-col space-y-2">
+   <div>
+    <input class="bg-transparent border-b-2 border-black w-4/6 md:5/6" placeholder="Email Address" type="text">
+    <i class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 rounded-full text-white justify-center items-center inline-flex"></i>
+   </div>
+  <div class="flex justify-between w-1/5 mb-2 mt-10">
+    <i class="fa-brands fa-square-facebook"></i>
+    <i class="fa-brands fa-square-twitter"></i>
+    <i class="fa-brands fa-square-instagram"></i>
+   </div>
+   </div>
+</div>
+  
+       </div>
+       <div class="text-center pt-4 mt-4">
+        <p class="text-sm text-gray-600">© 2027 UI Design.to - All rights reserved.</p>
+    
+      </div>
+    </footer>
   </body>
 </html>
